--- a/.github/workflows/update-profile.yml
+++ b/.github/workflows/update-profile.yml
@@ -11,7 +11,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: jamesgeorge007/github-activity-readme@master
+      - uses: Lissy93/github-activity-readme@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           MAX_LINES: 20
+          TARGET_FILE: ./profile/README.md
