--- a/.github/workflows/update-profile.yml
+++ b/.github/workflows/update-profile.yml
@@ -14,5 +14,6 @@ jobs:
       - uses: Lissy93/github-activity-readme@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
           MAX_LINES: 20
           TARGET_FILE: ./profile/README.md
