--- a/.github/workflows/update-profile.yml
+++ b/.github/workflows/update-profile.yml
@@ -17,3 +17,7 @@ jobs:
         with:
           MAX_LINES: 20
           TARGET_FILE: profile/README.md
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
