Fix action and add Patreon (#1)
* fix .github folder name and add patreon

* Update update-profile.yml

* Update update-profile.yml

* Update update-profile.yml

* Update update-profile.yml

* Update update-profile.yml

I despise github actions: part 5

* :zap: Update README with the recent activity

* :zap: Update README with the recent activity

* :zap: Update README with the recent activity

* :zap: Update README with the recent activity

* Update README.md

* Create FUNDING.yml

* Update update-profile.yml

---------

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/.github/workflows/update-profile.yml
+++ b/.github/workflows/update-profile.yml
@@ -11,7 +11,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: jamesgeorge007/github-activity-readme@master
+      - uses: naturecodevoid/github-activity-readme@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
           MAX_LINES: 20
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
